<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    style="?android:buttonBarButtonStyle"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"

        android:layout_width="match_parent"
        android:layout_height="wrap_content"

        android:orientation="vertical"
        android:paddingEnd="12dp"
        android:paddingStart="12dp">

        <EditText
            android:id="@+id/name_field"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/input_name"
            android:inputType="textCapWords"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/pick_the_most_obvious"
            android:textAlignment="viewEnd"
            style="@style/labels"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="?attr/colorControlHighlight"
            android:orientation="horizontal"
            android:weightSum="1">

            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4">

                <RadioButton
                    android:id="@+id/radio_button_yellow_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow"
                    />

                <RadioButton
                    android:id="@+id/radio_button_red_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red" />

                <RadioButton
                    android:id="@+id/radio_button_green_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/green"
                    />

                <RadioButton
                    android:id="@+id/radio_button_purple_q1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/purple"
                    />
            </RadioGroup>

            <ImageView

                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:contentDescription="@string/red_bird"
                android:src="@drawable/bird03" />

            <ImageView
                android:id="@+id/mark_up_q1"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:contentDescription="@string/mark_up_icon" />
        </LinearLayout>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"

            android:background="?attr/colorControlHighlight"
            android:orientation="horizontal"
            android:weightSum="1">


            <RadioGroup
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.4">

                <RadioButton
                    android:id="@+id/radio_button_orange_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/orange"
                    />

                <RadioButton
                    android:id="@+id/radio_button_brown_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brown"
                    />

                <RadioButton
                    android:id="@+id/radio_button_yellow_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow"
                    />

                <RadioButton
                    android:id="@+id/radio_button_blue_q2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue"
                    />
            </RadioGroup>


            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.5"
                android:contentDescription="@string/blue_bird"
                android:src="@drawable/bird04" />

            <ImageView
                android:id="@+id/mark_up_q2"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="@android:color/white" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:text="@string/check_all_that_applies"
            android:textAlignment="viewEnd"
            style="@style/labels"/>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="?attr/colorControlHighlight"
            android:orientation="horizontal"
            android:weightSum="1">

            <ImageView
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="0.4"
                android:contentDescription="@string/colorful_bird"
                android:src="@drawable/bird10" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.5"
                android:orientation="vertical">

                <CheckBox
                    android:id="@+id/checkbox_yellow_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/yellow" />

                <CheckBox
                    android:id="@+id/checkbox_red_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/red" />

                <CheckBox
                    android:id="@+id/checkbox_brown_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/brown" />

                <CheckBox
                    android:id="@+id/checkbox_blue_q3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/blue" />
            </LinearLayout>

            <ImageView
                android:id="@+id/mark_up_q3"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:contentDescription="@string/app_name" />

        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/question_q4"
            style="@style/labels"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="12dp"
            android:background="?attr/colorControlHighlight"
            android:orientation="horizontal"
            android:weightSum="1">

            <EditText
                android:id="@+id/input_field_q4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="0.9"
                android:hint="@string/input_answer" />

            <ImageView
                android:id="@+id/mark_up_q4"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_weight="0.1"
                android:contentDescription="@string/app_name" />
        </LinearLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="0.6"
            android:background="@color/colorAccent"
            android:textColor="@android:color/white"
            android:text="@string/view_score"
            style="?android:buttonBarButtonStyle"
            android:onClick="viewScore"/>

    </LinearLayout>
</ScrollView>
